--- a/Frontend/src/app/view-branch/view-branch/view-branch.component.html
+++ b/Frontend/src/app/view-branch/view-branch/view-branch.component.html
@@ -41,9 +41,13 @@
 
     </div>
 
+    <div class="d-flex justify-content-center">
+      <span class="loader" id="loading"></span>
+  </div>
+
     <div style="margin-right:1%; margin-left:1%;">
 
-      <table mat-table [dataSource]="SearchedBranch" class="mat-elevation-z8">
+      <table mat-table [dataSource]="SearchedBranch" class="mat-elevation-z8" id="table">
 
         <ng-container matColumnDef="branch_ID">
           <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">ID </th>
@@ -87,8 +91,8 @@
           <ng-container matColumnDef="delete">
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let Branches" style="width:140px;">
-                  <button mat-raised-button
-                      style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%;background-color: #FE4945;"
+                  <button id="DeleteButton" mat-raised-button
+                      style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%;"
                       (click)="DeleteBranch(this.Branches.branch_ID)"><mat-icon matPrefix
                           style="margin-right:10%;">delete</mat-icon>Delete</button>
               </td>
