--- a/Frontend/src/app/create-budget-line/create-budget-line.component.html
+++ b/Frontend/src/app/create-budget-line/create-budget-line.component.html
@@ -53,10 +53,9 @@
                                         <input matInput type="text" placeholder="" formControlName="month" id="month"
                                             [(ngModel)]="budgetLine.month" required>
                                         <mat-error *ngIf="myError('month', 'pattern')">Month must be in
-                                            numbers.</mat-error>
-                                        <mat-error *ngIf="myError('month', 'maxlength')">Month must be 4 characters
-                                            long.</mat-error>
-                                        <mat-error *ngIf="myError('month', 'minlength')">Month must be 4 characters
+                                            letters.</mat-error>
+                                        <mat-error *ngIf="myError('month', 'maxlength')">Limit exceeded</mat-error>
+                                        <mat-error *ngIf="myError('month', 'minlength')">Month must be 3 to 9 characters
                                             long.</mat-error>
                                     </mat-form-field>
                                 </mat-card-content>
@@ -97,22 +96,7 @@
                                     </mat-form-field>
                                 </mat-card-content>
                             </td>
-                            <td>
-                                <mat-card-content>
-                                    <label style=" color:black;">Variance:</label>
-                                    <br />
-                                    <mat-form-field>
-                                        <input matInput type="text" placeholder="" formControlName="variance"
-                                            id="variance" [(ngModel)]="budgetLine.variance" required>
-                                        <mat-error *ngIf="myError('variance', 'pattern')">Year must be in
-                                            numbers.</mat-error>
-                                        <mat-error *ngIf="myError('variance', 'pattern')">Year must be 4 characters
-                                            long.</mat-error>
-                                        <mat-error *ngIf="myError('variance', 'minlength')">Year must be 4 characters
-                                            long.</mat-error>
-                                    </mat-form-field>
-                                </mat-card-content>
-                            </td>
+
                         </tr>
                     </table>
                 </mat-card-subtitle>
