--- a/Frontend/src/app/main-nav/main-nav.component.css
+++ b/Frontend/src/app/main-nav/main-nav.component.css
@@ -11,3 +11,13 @@
   background-color: #244688;
   border-bottom:solid black;
 }
+
+.image-container {
+  height: 24px;
+  width: 24px;
+  z-index: 1;
+  border-radius: 50%;
+  background-color: #fff;
+  background-position: center;
+  background-size: cover;
+}
