--- a/Frontend/src/app/main-nav/main-nav.component.html
+++ b/Frontend/src/app/main-nav/main-nav.component.html
@@ -1,25 +1,29 @@
-<mat-toolbar class="main-nav">
-  <img src="./assets/Images/image 3.jpg" />
-  <span class="main-spacer"></span>
-  <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home" class="sub-spacer"
-    routerLink="/Home"></mat-icon>
-  <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/ViewEmployee"
-    mat-button>Administration</a>
-  <a class="sub-spacer" style="font-size:16pt; text-decoration:none; color:white;" routerLink="/ViewConsumable"
-    mat-button>Inventory</a>
-  <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/ViewBudgetAllocation"
-    mat-button>Finance</a>
-  <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" mat-button>Procurement</a>
-  <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/request-view"
-    mat-button>Vendor</a>
-  <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" mat-button>Reports</a>
-  <mat-icon aria-hidden="false" aria-label="notification icon" fontIcon="notifications" class="sub-spacer"
-    style="font-size:19pt;"></mat-icon>
-  <mat-icon aria-hidden="false" aria-label="profile icon" fontIcon="account_circle" class="sub-spacer"
-    style="font-size:19pt;" [matMenuTriggerFor]="beforeMenu"></mat-icon>
-  <mat-menu #beforeMenu="matMenu" xPosition="before">
-    <button mat-menu-item><mat-icon matPrefix>pageview</mat-icon>Profile</button>
-    <button mat-menu-item><mat-icon matPrefix>calendar_today</mat-icon>Calendar</button>
-    <button mat-menu-item><mat-icon matPrefix>logout</mat-icon>Logout</button>
-  </mat-menu>
-</mat-toolbar>
+<div>
+  <mat-toolbar class="main-nav">
+    <img src="./assets/Images/image 3.jpg" />
+    <span class="main-spacer"></span>
+    <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home" class="sub-spacer"
+      routerLink="/Home"></mat-icon>
+    <a *ngIf="this.RoleToUse === 'Admin'" class="sub-spacer"
+      style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/ViewEmployee"
+      mat-button>Administration</a>
+    <a class="sub-spacer" style="font-size:16pt; text-decoration:none; color:white;" routerLink="/ViewConsumable"
+      mat-button>Inventory</a>
+    <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;"
+      routerLink="/ViewBudgetAllocation" mat-button>Finance</a>
+    <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" mat-button>Procurement</a>
+    <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/request-view"
+      mat-button>Vendor</a>
+    <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" mat-button>Reports</a>
+    <mat-icon aria-hidden="false" aria-label="notification icon" fontIcon="notifications" class="sub-spacer"
+      style="font-size:19pt;"></mat-icon>
+    <mat-icon aria-hidden="false" aria-label="profile icon" fontIcon="account_circle" class="sub-spacer"
+      style="font-size:19pt;" [matMenuTriggerFor]="beforeMenu"></mat-icon>
+    <mat-menu #beforeMenu="matMenu" xPosition="before">
+      <button mat-menu-item><mat-icon matPrefix>pageview</mat-icon>Profile</button>
+      <button mat-menu-item><mat-icon matPrefix>calendar_today</mat-icon>Calendar</button>
+      <button mat-menu-item (click)="Logout()"><mat-icon matPrefix>logout</mat-icon>Logout</button>
+    </mat-menu>
+  </mat-toolbar>
+
+</div>
