--- a/Frontend/src/app/view-admin/view-admin.component.html
+++ b/Frontend/src/app/view-admin/view-admin.component.html
@@ -11,10 +11,9 @@
       <a mat-list-item class="uni-font" routerLink="/ViewEmployee">Employees</a>
       <a mat-list-item class="uni-font" routerLink="/ViewAdmin">Admins</a>
       <a mat-list-item class="uni-font" routerLink="/ViewEmpRole">Roles</a>
-      <a mat-list-item *ngIf='RoleToUse === "\"Admin\""' mat-list-item class="uni-font"
+      <a mat-list-item *ngIf='RoleToUse === "Admin"' mat-list-item class="uni-font"
         routerLink="/ViewDepartment">Departments</a>
-      <a mat-list-item *ngIf='RoleToUse === "\"Admin\""' mat-list-item class="uni-font"
-        routerLink="/ViewBranch">Branch</a>
+      <a mat-list-item *ngIf='RoleToUse === "Admin"' mat-list-item class="uni-font" routerLink="/ViewBranch">Branch</a>
       <a mat-list-item class="uni-font">Delegation of Authority</a>
       <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
       <a mat-list-item class="uni-font">Manage Help</a>
