--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -40,7 +40,12 @@
                 <button mat-raised-button type="submit"
                     style="width: 150px; font-size: 14px; height: 42px; margin: 10px;" [disabled]="!myForm.valid"
                     [ngStyle]="{'background-color': !myForm.valid ? 'rgba(148, 204, 91, 0.6)' : '#94CC5B','color': !myForm.valid ? 'rgba(255, 255, 255, 0.6)' : 'white'}">Login</button>
+
             </mat-card-actions>
+            <a href="#" routerLink="/ForgotPass"
+                style="display: flex; justify-content: center; align-items: center; margin-top: 5%;">Forgot
+                Password?</a>
+            &nbsp;
         </form>
     </mat-card>
 </div>
