--- a/Frontend/src/app/User/user-profile/user-profile.component.html
+++ b/Frontend/src/app/User/user-profile/user-profile.component.html
@@ -18,18 +18,26 @@
       </div>
     </mat-card-header>
     <mat-card-content>
+           <!--AdminTempelate-->
       <div *ngIf="rAdmin; else elseBlock">
         <h1 style="text-align:center; margin-bottom:5%;">
           {{adm.adminName}} {{adm.adminSurname}} <br /> <sub style="color: #747474">{{rl.description}}</sub>
           <br />
           <button mat-raised-button
-                  style="color:white; margin-top: 10px; font-size: 16px; width: 85px; background-color: #244688;"
+                  style="color:white; margin-top: 10px; margin-right: 10px; font-size: 16px; width: 85px; background-color: #244688;"
                   type="button" routerLink="/ProfileEdit">
             <mat-icon matPrefix
                       style="margin-right:10%;">edit</mat-icon>Edit
           </button>
+          <button mat-raised-button
+          style="color:white; margin-top: 10px; font-size: 16px; width: 212px; background-color: #244688;"
+          type="button" routerLink="/UpdatePassword">
+    <mat-icon matPrefix
+              style="margin-right:10%;">edit</mat-icon>Update Password
+  </button>
         </h1>
       </div>
+      <!--EmployeeTempelate-->
       <ng-template #elseBlock>
         <h1 style="text-align:center; margin-bottom:5%;">
           {{emp.employeeName}} {{emp.employeeSurname}} <br /> <sub style="color: #747474">{{rl.description}}</sub>
@@ -40,9 +48,17 @@
             <mat-icon matPrefix
                       style="margin-right:10%;">edit</mat-icon>Edit
           </button>
+          <button mat-raised-button
+          style="color:white; margin-top: 10px; font-size: 16px; width: 212px; background-color: #244688;"
+          type="button" routerLink="/UpdatePassword">
+    <mat-icon matPrefix
+              style="margin-right:10%;">edit</mat-icon>Update Password
+  </button>
         </h1>
       </ng-template>
       <!--<h4 style="text-align:center;"></h4>-->
+
+      <!--Admin Table-->
 
       <div *ngIf="rAdmin; else elseBlock2">
         <table style="width: 450px; font-size: 18px; background-color: #b9ccf1; border-radius: 8px;  margin: 8px 0; display: inline-block; border: 2px solid #244688; box-sizing: border-box; ">
@@ -80,7 +96,7 @@
           </tr>
         </table>
       </div>
-
+      <!--Employee Table-->
       <ng-template #elseBlock2>
         <table style="width: 450px; font-size: 18px; background-color: #b9ccf1; border-radius: 8px;  margin: 8px 0; display: inline-block; border: 2px solid #244688; box-sizing: border-box; ">
           <tr>
