--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -91,7 +91,7 @@
       <h1>Login</h1>
 
       <mat-form-field appearance="outline" style="margin-top:10px;">
-        <mat-label>Username</mat-label>
+        <mat-label>Username or Email</mat-label>
         <input matInput type="text" placeholder="" formControlName="UserName" id="Name" required [(ngModel)]="userName">
       </mat-form-field>
 
