--- a/Frontend/src/app/Delegation/view-delegation/view-delegation.component.html
+++ b/Frontend/src/app/Delegation/view-delegation/view-delegation.component.html
@@ -4,24 +4,26 @@
 
       <div mat-list-item style="display: flex; align-items: center;">
         <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="admin_panel_settings"
-                  style="width:30px; height: 44px; margin-left: 5%;"></mat-icon>
+          style="width:30px; height: 44px; margin-left: 5%;"></mat-icon>
         <h2 class="uni-font">Administration</h2>
       </div>
 
       <a mat-list-item class="uni-font" routerLink="/ViewEmployee">Employees</a>
       <a mat-list-item class="uni-font" routerLink="/ViewAdmin">Admins</a>
       <a mat-list-item class="uni-font" routerLink="/ViewEmpRole">Roles</a>
-      <a mat-list-item mat-list-item class="uni-font"
-         routerLink="/ViewDepartment">Departments</a>
+      <a mat-list-item mat-list-item class="uni-font" routerLink="/ViewDepartment">Departments</a>
       <a mat-list-item mat-list-item class="uni-font" routerLink="/ViewBranch">Branch</a>
       <a mat-list-item class="uni-font" routerLink="/Delegation">Delegation of Authority</a>
       <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
       <a mat-list-item class="uni-font" routerLink="/ViewHelp">Manage Help</a>
+      <a mat-list-item class="uni-font" routerLink="/ViewAuditLog">Audit Log</a>
       <a mat-list-item class="uni-font" [matMenuTriggerFor]="menu">Settings</a>
       <mat-menu #afterMenu="matMenu" xPosition="after" #menu="matMenu">
-        <button class="MenuButton" mat-menu-item (click)="openDialog()" matTooltip="This will allow you to backup the systems current data">
+        <button class="MenuButton" mat-menu-item (click)="openDialog()"
+          matTooltip="This will allow you to backup the systems current data">
           Backup System</button>
-        <button class="MenuButton" mat-menu-item (click)="openRestoreDialog()" matTooltip="This will allow you to restore the systems data with the backed-up file of your chosing">
+        <button class="MenuButton" mat-menu-item (click)="openRestoreDialog()"
+          matTooltip="This will allow you to restore the systems data with the backed-up file of your chosing">
           Restore System</button>
       </mat-menu>
     </mat-nav-list>
@@ -36,7 +38,7 @@
       <span style="flex: 1 1 auto;"></span>
 
       <mat-form-field appearance="fill"
-                      style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
+        style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
         <mat-label>Search by Name</mat-label>
         <input matInput (keyup)="search()" [(ngModel)]="searchWord" />
         <mat-icon matSuffix>search</mat-icon>
@@ -52,7 +54,7 @@
     <div style="margin-right:1%; margin-left:1%;" *ngIf="rAdmin">
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" id="table">
 
-       
+
 
         <ng-container matColumnDef="delegatingParty">
           <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Delegating Party </th>
@@ -77,22 +79,31 @@
 
         <ng-container matColumnDef="doaForm">
           <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Delegation Form </th>
-          <td mat-cell *matCellDef="let row; let i = index;"> <a (click)="openPDFInNewTab(i)" target="_blank" style="color: rgb(65, 143, 227);" matTooltip="This will direct you to the Delegation Form PDF, where you can find information regarding signed Acknowledgement and approval of the delegation for this specific Delegation of Authority">{{FileDetails[i].FileName}}</a></td>
+          <td mat-cell *matCellDef="let row; let i = index;"> <a (click)="openPDFInNewTab(i)" target="_blank"
+              style="color: rgb(65, 143, 227);"
+              matTooltip="This will direct you to the Delegation Form PDF, where you can find information regarding signed Acknowledgement and approval of the delegation for this specific Delegation of Authority">{{FileDetails[i].FileName}}</a>
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Status </th>
-          <td mat-cell *matCellDef="let row" matTooltip="{{row.delegation_Status.description}}"> {{row.delegation_Status.name}} </td>
+          <td mat-cell *matCellDef="let row" matTooltip="{{row.delegation_Status.description}}">
+            {{row.delegation_Status.name}} </td>
         </ng-container>
 
 
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let row" style="width:100px;">
-            <button class="noselect" type="button" style="background-color: #94CC5B;" [routerLink]="['/EditDelegation', row.delegation_ID]">
+            <button class="noselect" type="button" style="background-color: #94CC5B;"
+              [routerLink]="['/EditDelegation', row.delegation_ID]">
               <span class='text'>Edit</span>
               <span class="icon" style="border-left: 1px solid #94CC5B; ">
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                  viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                  <path
+                    d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z" />
+                </svg>
               </span>
             </button>
           </td>
@@ -111,7 +122,8 @@
                       fill: #000000
                     }
                   </style>
-                  <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
+                  <path
+                    d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
                 </svg>
               </span>
             </button>
@@ -121,13 +133,15 @@
         <ng-container matColumnDef="revoke">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let row" style="width:140px;">
-            <button mat-raised-button class="noselect" (click)="RevokeAccess(row.delegation_ID)" style="margin-right: 5%; display: flex; align-items: center; font-weight: bold; width: 180px; margin-top: 0.5%;" id="DeleteButton">
+            <button mat-raised-button class="noselect" (click)="RevokeAccess(row.delegation_ID)"
+              style="margin-right: 5%; display: flex; align-items: center; font-weight: bold; width: 180px; margin-top: 0.5%;"
+              id="DeleteButton">
               Revoke Access
             </button>
           </td>
         </ng-container>
 
- 
+
 
         <tr mat-header-row *matHeaderRowDef="displayedColumnsAdmin" style="background-color:#244688;"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumnsAdmin;"></tr>
